<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wine_name_label"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold"/>

        <EditText
            android:id="@+id/wine_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="57dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wine_id_label"
            android:textSize="24sp"
            android:textStyle="bold"/>


            <EditText
                android:id="@+id/wine_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_weight="1"
                android:layout_gravity="start"
                android:textAlignment="viewStart"/>
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wine_pack_label"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/wine_pack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_weight="1"
            android:layout_gravity="start"
            android:textAlignment="viewStart"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wine_price_label"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_weight="1"/>

        <EditText
                android:id="@+id/wine_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_weight="1"
                android:layout_gravity="start"
                android:textAlignment="viewStart"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="28dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wine_active_label"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <CheckBox
                android:id="@+id/wine_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_weight="1"
                android:layout_gravity="start"
                android:textAlignment="viewStart"/>

    </LinearLayout>
</LinearLayout>